ready product list, also fix some things about white space in bottom

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,14 +15,17 @@
 }
 
 html {
+  display: flex;
+  flex-direction:  column;
+  align-items: center;
   font-size: 62.5%;
   font-family: "Open Sans";
 }
 
 body {
   display: flex;
-  height: 100vh;
   flex-direction: column;
+  width: 100%;
   align-items: center;
   color: var(--just-white);
   background-repeat: no-repeat;
@@ -33,7 +36,7 @@ body {
   flex-direction: column;
   align-items:  center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: var(--form-background);
 }
 
@@ -124,7 +127,7 @@ input::placeholder {
   flex-direction: column;
   align-items:  center;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: var(--content-background);
 }
 
@@ -154,4 +157,72 @@ input::placeholder {
   color: var(--just-white);
 }
 
+.container-content-views .container-list {
+  display: flex;
+  flex-direction: column;
+  align-items:  center;
+  margin-top: 15px;
+}
 
+
+.container-content-views .container-list .container-list__title {
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.container-content-views .container-list h2 {
+  font-size: 1.4rem;
+}
+
+.container-list .product-card {
+  display: grid;
+  min-width: 308px;
+  grid-template-columns: 80px 1fr 100px;
+  border: solid 2px black;
+  border-radius: 25px;
+  padding: 5px;
+  font-size: 1.2rem;
+  margin: 15px;
+}
+
+.container-list .product-card .product-card__image {
+  width: 80px;
+  height: 80px;
+  align-self: center;
+}
+
+.container-list .product-card .product-card__image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+
+.container-list .product-card .product-card__detail--name {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.container-list .product-card .product-card__detail--name span:nth-child(1){
+  margin-bottom: 5px;
+}
+
+.product-card .product-card__detail--quantity {
+  grid-row-start: 2;
+  justify-self: center;
+  align-self: center; 
+  margin-top: 5px;
+}
+
+.product-card .product-card__detail--price {
+  justify-self:  center;
+}
+
+.product-card .product-card__detail--price {
+  margin: 2px;
+}
+
+.product-card .product-card__detail--category {
+  grid-column-start: 3;
+  justify-self: center;
+}
